--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,53 @@
+body {
+  background-image: url('../images/background.gif');
+  background-size: cover;
+  font-family: "Karla", sans-serif;
+  margin: 0;
+  padding: 20px;
+}
+
+#main-title {
+  color: white;
+  text-align: center;
+  font-weight: 600;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+#planets {
+  background-color: black;
+  color: white;
+  margin: 0 auto;
+  width: 70%;
+  font-weight: 400;
+}
+
 td, th {
-	border: 1px solid;
-  }
-  
+  border: 1px solid;
+  padding: 20px;
+  text-align: center;
+}
+
+.data-fields {
+  text-align: left;
+  font-weight: 700;
+}
+
+th.data-fields {
+  text-align: center;
+}
+
+td:not(.data-fields):hover {
+  background-color: #ddd;
+  color: black;
+  cursor: default;
+}
+
+.data-fields:hover {
+  text-decoration: underline;
+  cursor: default;
+}
+
+#footer {
+  color: white;
+}
