--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,20 @@ body {
   text-align: center;
   font-weight: 600;
   margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+#description {
+  background-color: black;
+  color: #ddd;
+  text-align: center;
   margin-bottom: 40px;
+}
+
+.pictures {
+  height: 150px;
+  width: auto;
+  
 }
 
 #planets {
@@ -43,11 +56,17 @@ td:not(.data-fields):hover {
   cursor: default;
 }
 
-.data-fields:hover {
+.data-fields:hover, th:hover {
   text-decoration: underline;
+  font-size: 1.2em;
   cursor: default;
 }
 
+
+
 #footer {
+  margin-top: 40px;
+  background-color: black;
   color: white;
+  text-align: center;
 }
