--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,6 @@ body {
   margin-bottom: 40px;
 }
 
-.pictures {
-  height: 150px;
-  width: auto;
-  
-}
-
 #planets {
   background-color: black;
   color: white;
@@ -41,6 +35,11 @@ td, th {
   text-align: center;
 }
 
+img {
+  height: 150px;
+  width: auto;
+}
+
 .data-fields {
   text-align: left;
   font-weight: 700;
@@ -50,7 +49,7 @@ th.data-fields {
   text-align: center;
 }
 
-td:not(.data-fields):hover {
+td:not(.data-fields):not(.pictures):hover {
   background-color: #ddd;
   color: black;
   cursor: default;
@@ -62,7 +61,11 @@ td:not(.data-fields):hover {
   cursor: default;
 }
 
-
+.pictures:hover {
+  transform: scale(2);
+  position: relative;
+  border: none;
+}
 
 #footer {
   margin-top: 40px;
